# raytracer

./: Cargo.toml  README.md
scenes/: celshading.xml  celshading_4_spheres.xml  demo_pyramids.xml  mirror_spheres.xml  scene01.xml  scene02.xml  scene03.xml  scene04.xml  scene05.xml  scene06.xml  scene07.xml  sphere_pyramid.xml  sphere_pyramids.xml  spotlights.xml  toon.xml
scenes/attenuation/: attenuation_at_20.xml  attenuation_at_32.xml  attenuation_at_50.xml  attenuation_at_7.xml  attenuation_off.xml  demo_attenuation.xml
scenes/lights_scene/: demo_all_lights.xml
scenes/projects_references/: geometry_spheres.xml
scenes/rows_mirror_spheres/: strip_of_spheres.xml
scenes/teapot_scene/: teapot_geometry.xml  teapot_materials.xml  teapot_scene.xml
scenes/three_spheres/: three_sphere.xml  three_sphere_below.xml
scenes/transform/: 01_basic_2_spheres.xml  01_basic_2_spheres_geometry.xml  02_teapot_scaled.xml  02_teapot_scaled_geometry.xml  03_dinning_chair.xml  03_dinning_set.xml  03_dinning_set_geometry.xml  03_dinning_table.xml
src/: aggregator.rs  api.rs  background.rs  bounding_box.rs  camera.rs  cli.rs  color.rs  dithering.rs  error.rs  film.rs  geometry.rs  hittable.rs  integrator.rs  lib.rs  light.rs  main.rs  material.rs  math.rs  object.rs  parse.rs  primitive.rs  ray.rs  render.rs  scene.rs  surfel.rs
src/core/: color.rs  ray.rs
src/geometry/: bounding_box.rs  hittable.rs  primitive.rs  surfel.rs
src/parse/: dto.rs
src/render/: aggregator.rs  dithering.rs  film.rs  integrator.rs
src/scene/: background.rs  camera.rs  light.rs  material.rs
(+10 files in other folders)
