[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from"] }
png = "0.18.1"
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
