[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"
default-run = "raytracer"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from"] }
glam = { version = "0.32.1", features = ["serde"] }
png = "0.18.1"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = "0.1.20"
thiserror = "2.0.18"
tobj = "4.0.3"
